examples/test/testpolicy16353.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16353
  namespace: namespace122
spec:
  podSelector:
    matchLabels:
      key27: value12
      key24: value13
      key8: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value28
      podSelector:
        matchLabels:
          key42: value4
          key44: value21
